--- a/packages/dmworkcontacts/src/NewFriend/index.css
+++ b/packages/dmworkcontacts/src/NewFriend/index.css
@@ -40,7 +40,7 @@
 
 .wk-newfriend-content-title-remark {
     font-size: 12px;
-    color: #666;
+    color: var(--text-tertiary);
     margin-top: 5px;
 }
 
